ec2_elb_ruleselb_tg_acm_sg_vpc_route53/instance.tf
resource "aws_instance" "app" {
  ami           = "${var.ami}"
  instance_type = "${var.instance_type}"
  security_groups = ["${aws_security_group.instance_sg.id}"]
  vpc_id      = "${aws_vpc.vpc_name.id}"
  tags = {
    Name = "=D"
  }
}
